--- a/es6/style.css
+++ b/es6/style.css
@@ -6,11 +6,12 @@
 body{
     width: 100vw;
     height: 100vh;
+    display: flex;
+    background-color: rgb(2, 2, 36);
 }
 #to-do-items{
-    width: 100%;
+    width: 55%;
     height: 100%;
-    background-color: rgb(2, 2, 36);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -20,4 +21,12 @@ body{
     color: blanchedalmond;
     font-size: 2rem;
     margin: 0.5rem 0;
+}
+#add-to-do-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#input-container{
+    width: 60%;
 }
